[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { version = "1.8.0", default-features = false, features = ["alloc", "std"] }
clap = { version = "4.4.10", features = ["derive"] }
criterion = { version = "0.5.1" }
num = "0.4.1"
rustc-hash = "1.1.0"
winnow = "0.5.19"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
lto = false

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false
